--- a/18. Wild Oasis App/wild_oasis_app/package.json
+++ b/18. Wild Oasis App/wild_oasis_app/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@tanstack/react-query": "^5.53.3",
+    "@tanstack/react-query-devtools": "^5.54.0",
+    "date-fns": "^3.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
